# Degheio

./: .gitignore  CMakeLists.txt  Line8.cs  Line8.java  Line9.java  README.md  line1.txt  line2.pl  line2.py  line3.bat  line3.py  line3.sh  line3.txt  line45.c  line45.cc  line46.cc  line5.rb  line6.rb  line6.txt  line7.hs  main.lua  main.rb  start.bat  start.sh
